packages/preset-theme-default/src/scss/index.scss
@use '@unocss/reset/tailwind.css';

// 👉 Global CSS Resets
body {
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeSpeed;
}

$body-color: hsla(var(--a-base-c), 0.68);

:root {
    // #region all-css-vars
    --a-base-c: 0, 10%, 20%;

    --a-spacing: 1;

    // ℹ️ Represents theme color. light => white, dark => black. ATM, it's used for backdrop & badge outline color.
    --a-theme-c: 0, 0%, 100%;

    // ℹ️ Used for background on body like select options, card, etc
    --a-surface-c: 0, 0%, 100%;
    
    --a-border-opacity: 0.12;
    --a-loader-overlay-bg-c: var(--a-theme-c);
    --a-loader-overlay-bg-opacity: 0.85;

    // TODO: This should be backdrop not overlay
    --a-backdrop-c: 0, 0%, 0%;
    --a-backdrop-opacity: 0.35;

    --a-primary: 265, 97.7%, 66.3%;
    --a-success: 94.5, 100%, 39.6%;
    --a-info: 200.1, 100%, 54.3%;
    --a-warning: 42.4, 100%, 50%;
    --a-danger: 358.3, 100%, 64.9%;

    // TODO: Add support to customize contrast color in => packages/anu-vue/src/utils/colord.ts
    // Contrast colors
    // --a-contrast-dark: #000;
    // --a-contrast-light: #fff;

    // text emphasis
    --a-text-emphasis-high-opacity: 0.87;
    --a-text-emphasis-medium-opacity: 0.68;
    --a-text-emphasis-light-opacity: 0.38;

    // Typography
    --a-title-c: var(--a-base-c);
    --a-subtitle-c: var(--a-base-c);
    --a-title-opacity: var(--a-text-emphasis-high-opacity);
    --a-subtitle-opacity: var(--a-text-emphasis-light-opacity);

    // SECTION Components

    // 👉 Card
    --a-card-spacer: 1em;

    // 👉 Spinner
    --a-spinner-size: 1.25em;

    // 👉 Switch
    --a-switch-track-size: 3em;
    --a-switch-thumb-margin: .25em;
    --a-switch-default-color: 220, 13%, 91%;
    /*
      ℹ️ Value of this property is => hsla(var(--a-base-c), var(--a-text-emphasis-medium-opacity)).
      As this will be always on light background we will keep it static and choose color from light scheme
    */
    --a-switch-icon-color: hsla(0, 10%, 20%, 0.68);

    // 👉 List
    // ℹ️ We might not need `--a-list-gap` this if we are using just `AList`, however when we use list inside another component this will be helpful
    // #region a-list-css-vars
    --a-list-gap: calc(0em * var(--a-spacing));
    --a-list-item-gap: calc(0.75em * var(--a-spacing));
    --a-list-item-padding: calc(0.5em * var(--a-spacing)) calc(1em * var(--a-spacing));
    --a-list-item-margin: calc(0em * var(--a-spacing));
    --a-list-item-min-height: calc(2.5em * var(--a-spacing));
    // #endregion a-list-css-vars

    // #endregion all-css-vars

    // !SECTION
}

:root.dark {
  --a-base-c: 0, 0%, 94%;
  --a-theme-c: 0, 0%, 0%;
  --a-surface-c: 0, 0%, 12%;
  --a-loader-overlay-bg-opacity: 0.75;
  --a-backdrop-opacity: 0.5;

  --a-primary: 261, 73%, 66.3%;
  --a-success: 94.5, 73%, 39.6%;
  --a-info: 200.1, 73%, 54.3%;
  --a-warning: 42.4, 73%, 50%;
  --a-danger: 358.3, 73%, 64.9%;

  // SECTION Components

  // 👉 Switch
    --a-switch-default-color: 0, 0%, 16%;
    
  // !SECTION
}

// 👉 Typography

body {
  color: $body-color;

  // Disable mobile tap blue color
  -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: hsla(var(--a-base-c), 0.87)
}

// 👉 Misc

@keyframes shake {
  0%   {transform: translateX(0);}
  25%  {transform: translateX(1px);}
  50%  {transform: translateX(-1px);}
  100% {transform: translateX(0);}
}

.a-base-input-label.text-danger {
    animation-name: shake;
    animation-duration: 0.35s;
}

// Set default border-color for `hr` element for color scheme compatibility
hr {
  border-color: hsla(var(--a-base-c),var(--a-border-opacity))
}

// Remove outline
.a-btn,
input,
select,
textarea {
  &:focus {
    outline: none;
  }
}

// ℹ️ Remove autocomplete styles
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-text-fill-color: $body-color;
  transition: background-color 5000s ease-in-out 0s;
}

